policies/kyverno/verify-homelab-api-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-homelab-api-signature
spec:
  background: false
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-homelab-api-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/luke18-r/homelab-api*"
          mutateDigest: true
          verifyDigest: true
          required: true
          failureAction: Enforce
          attestors:
            - count: 1
              entries:
                - keyless:
                    subject: "pitigoilucian18@gmail.com"
                    issuer: "https://github.com/login/oauth"
                    rekor:
                      url: "https://rekor.sigstore.dev"
